// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dot multi-stack-app should generate dot artifact 1`] = `
"digraph \\"ROOT\\" {
  label = \\"Cloud Diagram\\";
  imagepath = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets\\";
  fontname = \\"Roboto Condensed\\";
  class = \\"font_regular\\";
  stylesheet = \\"https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap\\";
  ratio = \\"fill\\";
  orientation = \\"[lL]*\\";
  size = \\"%512,%384!\\";
  dpi = 300;
  labelloc = \\"tc\\";
  forcelabels = true;
  splines = \\"ortho\\";
  pad = \\"%2,%1\\";
  nodesep = 0.6;
  ranksep = 0.75;
  fontnames = \\"ps\\";
  fontsize = 14;
  rankdir = \\"LR\\";
  compound = true;
  fontcolor = \\"#000000\\";
  packmode = \\"array_t3\\";
  center = true;
  concentrate = true;
  remincross = true;
  bgcolor = \\"#FFFFFF\\";
  edge [
    fontname = \\"Roboto Condensed\\";
    class = \\"font_light_italic\\";
    dir = \\"both\\";
    color = \\"#5A6B861A\\";
    penwidth = 0.75;
    arrowhead = \\"none\\";
    arrowtail = \\"normal\\";
    arrowsize = 0.5;
    fontsize = 9;
    style = \\"solid\\";
    fontcolor = \\"#5A6B861A\\";
  ];
  node [
    fontname = \\"Roboto Condensed\\";
    class = \\"font_regular\\";
    shape = \\"box\\";
    style = \\"solid\\";
    fixedsize = false;
    width = 0.25;
    height = 0.25;
    labelloc = \\"c\\";
    imagescale = true;
    fontsize = 11;
    penwidth = 0.25;
    fontcolor = \\"#232F3E\\";
  ];
  subgraph \\"cluster_stack_FixtureStack\\" {
    fontname = \\"Roboto Condensed\\";
    class = \\"font_light\\";
    labelloc = \\"tc\\";
    fontsize = 12;
    style = \\"solid,bold,filled\\";
    label = \\"FixtureStack\\";
    fillcolor = \\"#5A6B861A\\";
    margin = 10;
    color = \\"#000000CC\\";
    bgcolor = \\"#5A6B861A\\";
    pencolor = \\"transparent\\";
    fontcolor = \\"#000000CC\\";
    \\"node_FixtureStackBucket86DAF50D\\" [
      label = \\"Bucket\\";
      comment = \\"nodeType:RESOURCE(AWS::S3::Bucket)\\";
      shape = \\"box\\";
      style = \\"solid,rounded\\";
      fixedsize = true;
      width = 1;
      height = 1.23;
      labelloc = \\"b\\";
      imagescale = true;
      imagepos = \\"tc\\";
      penwidth = 0;
      fillcolor = \\"transparent\\";
      image = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets/storage/s3/bucket.svg\\";
      color = \\"#232F3E\\";
      fontcolor = \\"#232F3E\\";
    ];
    \\"node_FixtureStackLambdaFunction508F3278\\" [
      label = \\"LambdaFunction\\";
      comment = \\"nodeType:RESOURCE(AWS::Lambda::Function)\\";
      shape = \\"box\\";
      style = \\"solid,rounded\\";
      fixedsize = true;
      width = 1;
      height = 1.23;
      labelloc = \\"b\\";
      imagescale = true;
      imagepos = \\"tc\\";
      penwidth = 0;
      fillcolor = \\"transparent\\";
      image = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets/compute/lambda/lambda_function.svg\\";
      color = \\"#232F3E\\";
      fontcolor = \\"#232F3E\\";
    ];
    \\"node_FixtureStackRoleAD30503D\\" [
      label = \\"Role\\";
      comment = \\"nodeType:RESOURCE(AWS::IAM::Role)\\";
      shape = \\"box\\";
      style = \\"solid,rounded\\";
      fixedsize = true;
      width = 1;
      height = 1.23;
      labelloc = \\"b\\";
      imagescale = true;
      imagepos = \\"tc\\";
      penwidth = 0;
      fillcolor = \\"transparent\\";
      image = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets/security_identity_compliance/iam/role.svg\\";
      color = \\"#232F3E\\";
      fontcolor = \\"#232F3E\\";
    ];
    \\"node_FixtureStackVPCD8D56D99\\" [
      label = \\"VPC\\";
      comment = \\"nodeType:RESOURCE(AWS::EC2::VPC)\\";
      shape = \\"box\\";
      style = \\"solid,rounded\\";
      fixedsize = true;
      width = 1;
      height = 1.23;
      labelloc = \\"b\\";
      imagescale = true;
      imagepos = \\"tc\\";
      penwidth = 0;
      fillcolor = \\"transparent\\";
      image = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets/networking_content_delivery/vpc/service_icon.svg\\";
      color = \\"#232F3E\\";
      fontcolor = \\"#232F3E\\";
    ];
    \\"node_FixtureStackWebSecurityGroupCEAFD965\\" [
      label = \\"WebSecurity\\\\nGroup\\";
      comment = \\"nodeType:RESOURCE(AWS::EC2::SecurityGroup)\\";
      shape = \\"box\\";
      style = \\"solid,rounded\\";
      fixedsize = true;
      width = 1;
      height = 1.46;
      labelloc = \\"b\\";
      imagescale = true;
      imagepos = \\"tc\\";
      penwidth = 0;
      fillcolor = \\"transparent\\";
      image = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets/compute/ec2/service_icon.svg\\";
      color = \\"#232F3E\\";
      fontcolor = \\"#232F3E\\";
    ];
    \\"node_FixtureStackwebserverrole160854C9\\" [
      label = \\"WebserverRole\\";
      comment = \\"nodeType:RESOURCE(AWS::IAM::Role)\\";
      shape = \\"box\\";
      style = \\"solid,rounded\\";
      fixedsize = true;
      width = 1;
      height = 1.23;
      labelloc = \\"b\\";
      imagescale = true;
      imagepos = \\"tc\\";
      penwidth = 0;
      fillcolor = \\"transparent\\";
      image = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets/security_identity_compliance/iam/role.svg\\";
      color = \\"#232F3E\\";
      fontcolor = \\"#232F3E\\";
    ];
    \\"node_FixtureStackWebServer5FFD77FD\\" [
      label = \\"WebServer\\";
      comment = \\"nodeType:RESOURCE(AWS::EC2::Instance)\\";
      shape = \\"box\\";
      style = \\"solid,rounded\\";
      fixedsize = true;
      width = 1;
      height = 1.23;
      labelloc = \\"b\\";
      imagescale = true;
      imagepos = \\"tc\\";
      penwidth = 0;
      fillcolor = \\"transparent\\";
      image = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets/compute/ec2/instance/c5.svg\\";
      color = \\"#232F3E\\";
      fontcolor = \\"#232F3E\\";
    ];
    \\"node_FixtureStackBastionD2DE2F50\\" [
      label = \\"Bastion\\";
      comment = \\"nodeType:RESOURCE(AWS::EC2::Instance)\\";
      shape = \\"box\\";
      style = \\"solid,rounded\\";
      fixedsize = true;
      width = 1;
      height = 1.23;
      labelloc = \\"b\\";
      imagescale = true;
      imagepos = \\"tc\\";
      penwidth = 0;
      fillcolor = \\"transparent\\";
      image = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets/compute/ec2/instance/t2.svg\\";
      color = \\"#232F3E\\";
      fontcolor = \\"#232F3E\\";
    ];
    \\"node_FixtureStackDatabase25106652\\" [
      label = \\"Database\\";
      comment = \\"nodeType:RESOURCE(AWS::RDS::DBInstance)\\";
      shape = \\"box\\";
      style = \\"solid,rounded\\";
      fixedsize = true;
      width = 1;
      height = 1.23;
      labelloc = \\"b\\";
      imagescale = true;
      imagepos = \\"tc\\";
      penwidth = 0;
      fillcolor = \\"transparent\\";
      image = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets/database/rds/instance/postgresql.svg\\";
      color = \\"#232F3E\\";
      fontcolor = \\"#232F3E\\";
    ];
  }
  subgraph \\"cluster_stack_DependentStack\\" {
    fontname = \\"Roboto Condensed\\";
    class = \\"font_light\\";
    labelloc = \\"tc\\";
    fontsize = 12;
    style = \\"solid,bold,filled\\";
    label = \\"DependentStack\\";
    fillcolor = \\"#5A6B861A\\";
    margin = 10;
    color = \\"#000000CC\\";
    bgcolor = \\"#5A6B861A\\";
    pencolor = \\"transparent\\";
    fontcolor = \\"#000000CC\\";
    subgraph \\"cluster_nstack_DependentStackResourceStack942BB4A4\\" {
      fontname = \\"Roboto Condensed\\";
      class = \\"font_light_italic\\";
      labelloc = \\"tc\\";
      fontsize = 12;
      style = \\"solid,filled\\";
      label = \\"ResourceStack\\";
      fillcolor = \\"#5A6B861A\\";
      margin = 6;
      color = \\"#000000CC\\";
      bgcolor = \\"#5A6B861A\\";
      pencolor = \\"transparent\\";
      fontcolor = \\"#000000CC\\";
      \\"node_DependentStackResourceStackLambdaFunction7EA52A33\\" [
        label = \\"LambdaFunction\\";
        comment = \\"nodeType:RESOURCE(AWS::Lambda::Function)\\";
        shape = \\"box\\";
        style = \\"solid,rounded\\";
        fixedsize = true;
        width = 1;
        height = 1.23;
        labelloc = \\"b\\";
        imagescale = true;
        imagepos = \\"tc\\";
        penwidth = 0;
        fillcolor = \\"transparent\\";
        image = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets/compute/lambda/lambda_function.svg\\";
        color = \\"#232F3E\\";
        fontcolor = \\"#232F3E\\";
      ];
      \\"node_DependentStackResourceStackRole9D63A0D4\\" [
        label = \\"Role\\";
        comment = \\"nodeType:RESOURCE(AWS::IAM::Role)\\";
        shape = \\"box\\";
        style = \\"solid,rounded\\";
        fixedsize = true;
        width = 1;
        height = 1.23;
        labelloc = \\"b\\";
        imagescale = true;
        imagepos = \\"tc\\";
        penwidth = 0;
        fillcolor = \\"transparent\\";
        image = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets/security_identity_compliance/iam/role.svg\\";
        color = \\"#232F3E\\";
        fontcolor = \\"#232F3E\\";
      ];
    }
  }
  \\"node_FixtureStackLambdaFunction508F3278\\" -> \\"node_FixtureStackBucket86DAF50D\\" [
    id = \\"ATT:1XuBhl\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_FixtureStackBucket86DAF50D\\" -> \\"node_FixtureStackLambdaFunction508F3278\\" [
    ltail = \\"cluster_stack_FixtureStack\\";
    id = \\"REF:22SPST\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_FixtureStackRoleAD30503D\\" -> \\"node_FixtureStackBucket86DAF50D\\" [
    id = \\"ATT:Z12pDFM\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_FixtureStackRoleAD30503D\\" -> \\"node_FixtureStackLambdaFunction508F3278\\" [
    id = \\"ATT:Z2jXRxB\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_FixtureStackWebSecurityGroupCEAFD965\\" -> \\"node_FixtureStackVPCD8D56D99\\" [
    id = \\"REF:nU1OR\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_FixtureStackWebServer5FFD77FD\\" -> \\"node_FixtureStackwebserverrole160854C9\\" [
    id = \\"REF:selsP\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_FixtureStackWebServer5FFD77FD\\" -> \\"node_FixtureStackBucket86DAF50D\\" [
    lhead = \\"cluster_stack_FixtureStack\\";
    id = \\"REF:18A0na\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_FixtureStackWebServer5FFD77FD\\" -> \\"node_FixtureStackWebSecurityGroupCEAFD965\\" [
    id = \\"ATT:Z1xwB9h\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_FixtureStackWebServer5FFD77FD\\" -> \\"node_FixtureStackVPCD8D56D99\\" [
    id = \\"REF:Z13sD7x\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_FixtureStackBastionD2DE2F50\\" -> \\"node_FixtureStackBucket86DAF50D\\" [
    lhead = \\"cluster_stack_FixtureStack\\";
    id = \\"REF:h7gu5\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_FixtureStackBastionD2DE2F50\\" -> \\"node_FixtureStackVPCD8D56D99\\" [
    id = \\"REF:Z1YohcM\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_FixtureStackDatabase25106652\\" -> \\"node_FixtureStackVPCD8D56D99\\" [
    id = \\"REF:dKg9w\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_FixtureStackBucket86DAF50D\\" -> \\"node_FixtureStackRoleAD30503D\\" [
    ltail = \\"cluster_stack_FixtureStack\\";
    id = \\"ATT:18aoBY\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_DependentStackResourceStackLambdaFunction7EA52A33\\" -> \\"node_FixtureStackBucket86DAF50D\\" [
    lhead = \\"cluster_stack_FixtureStack\\";
    id = \\"IMP:1KTPOY\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_DependentStackResourceStackRole9D63A0D4\\" -> \\"node_FixtureStackBucket86DAF50D\\" [
    lhead = \\"cluster_stack_FixtureStack\\";
    id = \\"IMP:2rNXlT\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_DependentStackResourceStackRole9D63A0D4\\" -> \\"node_DependentStackResourceStackLambdaFunction7EA52A33\\" [
    id = \\"ATT:1GY4jj\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_DependentStackResourceStackLambdaFunction7EA52A33\\" -> \\"node_DependentStackResourceStackRole9D63A0D4\\" [
    ltail = \\"cluster_nstack_DependentStackResourceStack942BB4A4\\";
    id = \\"REF:Z202Slm\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
}"
`;

exports[`dot single-stack-app should generate dot artifact 1`] = `
"digraph \\"ROOT\\" {
  label = \\"Cloud Diagram\\";
  imagepath = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets\\";
  fontname = \\"Roboto Condensed\\";
  class = \\"font_regular\\";
  stylesheet = \\"https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap\\";
  ratio = \\"fill\\";
  orientation = \\"[lL]*\\";
  size = \\"%512,%384!\\";
  dpi = 300;
  labelloc = \\"tc\\";
  forcelabels = true;
  splines = \\"ortho\\";
  pad = \\"%2,%1\\";
  nodesep = 0.6;
  ranksep = 0.75;
  fontnames = \\"ps\\";
  fontsize = 14;
  rankdir = \\"LR\\";
  compound = true;
  fontcolor = \\"#000000\\";
  packmode = \\"array_t3\\";
  center = true;
  concentrate = true;
  remincross = true;
  bgcolor = \\"#FFFFFF\\";
  edge [
    fontname = \\"Roboto Condensed\\";
    class = \\"font_light_italic\\";
    dir = \\"both\\";
    color = \\"#5A6B861A\\";
    penwidth = 0.75;
    arrowhead = \\"none\\";
    arrowtail = \\"normal\\";
    arrowsize = 0.5;
    fontsize = 9;
    style = \\"solid\\";
    fontcolor = \\"#5A6B861A\\";
  ];
  node [
    fontname = \\"Roboto Condensed\\";
    class = \\"font_regular\\";
    shape = \\"box\\";
    style = \\"solid\\";
    fixedsize = false;
    width = 0.25;
    height = 0.25;
    labelloc = \\"c\\";
    imagescale = true;
    fontsize = 11;
    penwidth = 0.25;
    fontcolor = \\"#232F3E\\";
  ];
  subgraph \\"cluster_stack_FixtureStack\\" {
    fontname = \\"Roboto Condensed\\";
    class = \\"font_light\\";
    labelloc = \\"tc\\";
    fontsize = 12;
    style = \\"solid,bold,filled\\";
    label = \\"FixtureStack\\";
    fillcolor = \\"#5A6B861A\\";
    margin = 10;
    color = \\"#000000CC\\";
    bgcolor = \\"#5A6B861A\\";
    pencolor = \\"transparent\\";
    fontcolor = \\"#000000CC\\";
    \\"node_FixtureStackBucket86DAF50D\\" [
      label = \\"Bucket\\";
      comment = \\"nodeType:RESOURCE(AWS::S3::Bucket)\\";
      shape = \\"box\\";
      style = \\"solid,rounded\\";
      fixedsize = true;
      width = 1;
      height = 1.23;
      labelloc = \\"b\\";
      imagescale = true;
      imagepos = \\"tc\\";
      penwidth = 0;
      fillcolor = \\"transparent\\";
      image = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets/storage/s3/bucket.svg\\";
      color = \\"#232F3E\\";
      fontcolor = \\"#232F3E\\";
    ];
    \\"node_FixtureStackLambdaFunction508F3278\\" [
      label = \\"LambdaFunction\\";
      comment = \\"nodeType:RESOURCE(AWS::Lambda::Function)\\";
      shape = \\"box\\";
      style = \\"solid,rounded\\";
      fixedsize = true;
      width = 1;
      height = 1.23;
      labelloc = \\"b\\";
      imagescale = true;
      imagepos = \\"tc\\";
      penwidth = 0;
      fillcolor = \\"transparent\\";
      image = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets/compute/lambda/lambda_function.svg\\";
      color = \\"#232F3E\\";
      fontcolor = \\"#232F3E\\";
    ];
    \\"node_FixtureStackRoleAD30503D\\" [
      label = \\"Role\\";
      comment = \\"nodeType:RESOURCE(AWS::IAM::Role)\\";
      shape = \\"box\\";
      style = \\"solid,rounded\\";
      fixedsize = true;
      width = 1;
      height = 1.23;
      labelloc = \\"b\\";
      imagescale = true;
      imagepos = \\"tc\\";
      penwidth = 0;
      fillcolor = \\"transparent\\";
      image = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets/security_identity_compliance/iam/role.svg\\";
      color = \\"#232F3E\\";
      fontcolor = \\"#232F3E\\";
    ];
    \\"node_FixtureStackVPCD8D56D99\\" [
      label = \\"VPC\\";
      comment = \\"nodeType:RESOURCE(AWS::EC2::VPC)\\";
      shape = \\"box\\";
      style = \\"solid,rounded\\";
      fixedsize = true;
      width = 1;
      height = 1.23;
      labelloc = \\"b\\";
      imagescale = true;
      imagepos = \\"tc\\";
      penwidth = 0;
      fillcolor = \\"transparent\\";
      image = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets/networking_content_delivery/vpc/service_icon.svg\\";
      color = \\"#232F3E\\";
      fontcolor = \\"#232F3E\\";
    ];
    \\"node_FixtureStackWebSecurityGroupCEAFD965\\" [
      label = \\"WebSecurity\\\\nGroup\\";
      comment = \\"nodeType:RESOURCE(AWS::EC2::SecurityGroup)\\";
      shape = \\"box\\";
      style = \\"solid,rounded\\";
      fixedsize = true;
      width = 1;
      height = 1.46;
      labelloc = \\"b\\";
      imagescale = true;
      imagepos = \\"tc\\";
      penwidth = 0;
      fillcolor = \\"transparent\\";
      image = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets/compute/ec2/service_icon.svg\\";
      color = \\"#232F3E\\";
      fontcolor = \\"#232F3E\\";
    ];
    \\"node_FixtureStackwebserverrole160854C9\\" [
      label = \\"WebserverRole\\";
      comment = \\"nodeType:RESOURCE(AWS::IAM::Role)\\";
      shape = \\"box\\";
      style = \\"solid,rounded\\";
      fixedsize = true;
      width = 1;
      height = 1.23;
      labelloc = \\"b\\";
      imagescale = true;
      imagepos = \\"tc\\";
      penwidth = 0;
      fillcolor = \\"transparent\\";
      image = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets/security_identity_compliance/iam/role.svg\\";
      color = \\"#232F3E\\";
      fontcolor = \\"#232F3E\\";
    ];
    \\"node_FixtureStackWebServer5FFD77FD\\" [
      label = \\"WebServer\\";
      comment = \\"nodeType:RESOURCE(AWS::EC2::Instance)\\";
      shape = \\"box\\";
      style = \\"solid,rounded\\";
      fixedsize = true;
      width = 1;
      height = 1.23;
      labelloc = \\"b\\";
      imagescale = true;
      imagepos = \\"tc\\";
      penwidth = 0;
      fillcolor = \\"transparent\\";
      image = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets/compute/ec2/instance/c5.svg\\";
      color = \\"#232F3E\\";
      fontcolor = \\"#232F3E\\";
    ];
    \\"node_FixtureStackBastionD2DE2F50\\" [
      label = \\"Bastion\\";
      comment = \\"nodeType:RESOURCE(AWS::EC2::Instance)\\";
      shape = \\"box\\";
      style = \\"solid,rounded\\";
      fixedsize = true;
      width = 1;
      height = 1.23;
      labelloc = \\"b\\";
      imagescale = true;
      imagepos = \\"tc\\";
      penwidth = 0;
      fillcolor = \\"transparent\\";
      image = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets/compute/ec2/instance/t2.svg\\";
      color = \\"#232F3E\\";
      fontcolor = \\"#232F3E\\";
    ];
    \\"node_FixtureStackDatabase25106652\\" [
      label = \\"Database\\";
      comment = \\"nodeType:RESOURCE(AWS::RDS::DBInstance)\\";
      shape = \\"box\\";
      style = \\"solid,rounded\\";
      fixedsize = true;
      width = 1;
      height = 1.23;
      labelloc = \\"b\\";
      imagescale = true;
      imagepos = \\"tc\\";
      penwidth = 0;
      fillcolor = \\"transparent\\";
      image = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets/database/rds/instance/postgresql.svg\\";
      color = \\"#232F3E\\";
      fontcolor = \\"#232F3E\\";
    ];
  }
  \\"node_FixtureStackLambdaFunction508F3278\\" -> \\"node_FixtureStackBucket86DAF50D\\" [
    id = \\"ATT:1XuBhl\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_FixtureStackBucket86DAF50D\\" -> \\"node_FixtureStackLambdaFunction508F3278\\" [
    ltail = \\"cluster_stack_FixtureStack\\";
    id = \\"REF:22SPST\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_FixtureStackRoleAD30503D\\" -> \\"node_FixtureStackBucket86DAF50D\\" [
    id = \\"ATT:Z12pDFM\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_FixtureStackRoleAD30503D\\" -> \\"node_FixtureStackLambdaFunction508F3278\\" [
    id = \\"ATT:Z2jXRxB\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_FixtureStackWebSecurityGroupCEAFD965\\" -> \\"node_FixtureStackVPCD8D56D99\\" [
    id = \\"REF:nU1OR\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_FixtureStackWebServer5FFD77FD\\" -> \\"node_FixtureStackwebserverrole160854C9\\" [
    id = \\"REF:selsP\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_FixtureStackWebServer5FFD77FD\\" -> \\"node_FixtureStackBucket86DAF50D\\" [
    lhead = \\"cluster_stack_FixtureStack\\";
    id = \\"REF:18A0na\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_FixtureStackWebServer5FFD77FD\\" -> \\"node_FixtureStackWebSecurityGroupCEAFD965\\" [
    id = \\"ATT:Z1xwB9h\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_FixtureStackWebServer5FFD77FD\\" -> \\"node_FixtureStackVPCD8D56D99\\" [
    id = \\"REF:Z13sD7x\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_FixtureStackBastionD2DE2F50\\" -> \\"node_FixtureStackBucket86DAF50D\\" [
    lhead = \\"cluster_stack_FixtureStack\\";
    id = \\"REF:h7gu5\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_FixtureStackBastionD2DE2F50\\" -> \\"node_FixtureStackVPCD8D56D99\\" [
    id = \\"REF:Z1YohcM\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_FixtureStackDatabase25106652\\" -> \\"node_FixtureStackVPCD8D56D99\\" [
    id = \\"REF:dKg9w\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_FixtureStackBucket86DAF50D\\" -> \\"node_FixtureStackRoleAD30503D\\" [
    ltail = \\"cluster_stack_FixtureStack\\";
    id = \\"ATT:18aoBY\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
}"
`;

exports[`dot staged-app should generate dot artifact 1`] = `
"digraph \\"ROOT\\" {
  label = \\"Cloud Diagram\\";
  imagepath = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets\\";
  fontname = \\"Roboto Condensed\\";
  class = \\"font_regular\\";
  stylesheet = \\"https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap\\";
  ratio = \\"fill\\";
  orientation = \\"[lL]*\\";
  size = \\"%512,%384!\\";
  dpi = 300;
  labelloc = \\"tc\\";
  forcelabels = true;
  splines = \\"ortho\\";
  pad = \\"%2,%1\\";
  nodesep = 0.6;
  ranksep = 0.75;
  fontnames = \\"ps\\";
  fontsize = 14;
  rankdir = \\"LR\\";
  compound = true;
  fontcolor = \\"#000000\\";
  packmode = \\"array_t3\\";
  center = true;
  concentrate = true;
  remincross = true;
  bgcolor = \\"#FFFFFF\\";
  edge [
    fontname = \\"Roboto Condensed\\";
    class = \\"font_light_italic\\";
    dir = \\"both\\";
    color = \\"#5A6B861A\\";
    penwidth = 0.75;
    arrowhead = \\"none\\";
    arrowtail = \\"normal\\";
    arrowsize = 0.5;
    fontsize = 9;
    style = \\"solid\\";
    fontcolor = \\"#5A6B861A\\";
  ];
  node [
    fontname = \\"Roboto Condensed\\";
    class = \\"font_regular\\";
    shape = \\"box\\";
    style = \\"solid\\";
    fixedsize = false;
    width = 0.25;
    height = 0.25;
    labelloc = \\"c\\";
    imagescale = true;
    fontsize = 11;
    penwidth = 0.25;
    fontcolor = \\"#232F3E\\";
  ];
  subgraph \\"cluster_stage_Dev\\" {
    fontname = \\"Roboto Condensed\\";
    class = \\"font_bold_italic\\";
    labelloc = \\"tc\\";
    fontsize = 12;
    style = \\"dashed\\";
    label = \\"Dev\\";
    margin = 6;
    color = \\"#B0084D\\";
    bgcolor = \\"transparent\\";
    fillcolor = \\"transparent\\";
    pencolor = \\"#B0084D\\";
    fontcolor = \\"#B0084D\\";
    subgraph \\"cluster_stack_DevFixtureStack\\" {
      fontname = \\"Roboto Condensed\\";
      class = \\"font_light\\";
      labelloc = \\"tc\\";
      fontsize = 12;
      style = \\"solid,bold,filled\\";
      label = \\"FixtureStack\\";
      fillcolor = \\"#5A6B861A\\";
      margin = 10;
      color = \\"#000000CC\\";
      bgcolor = \\"#5A6B861A\\";
      pencolor = \\"transparent\\";
      fontcolor = \\"#000000CC\\";
      \\"node_DevFixtureStackBucket15FA9EDE\\" [
        label = \\"Bucket\\";
        comment = \\"nodeType:RESOURCE(AWS::S3::Bucket)\\";
        shape = \\"box\\";
        style = \\"solid,rounded\\";
        fixedsize = true;
        width = 1;
        height = 1.23;
        labelloc = \\"b\\";
        imagescale = true;
        imagepos = \\"tc\\";
        penwidth = 0;
        fillcolor = \\"transparent\\";
        image = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets/storage/s3/bucket.svg\\";
        color = \\"#232F3E\\";
        fontcolor = \\"#232F3E\\";
      ];
      \\"node_DevFixtureStackLambdaFunctionB1D81AFE\\" [
        label = \\"LambdaFunction\\";
        comment = \\"nodeType:RESOURCE(AWS::Lambda::Function)\\";
        shape = \\"box\\";
        style = \\"solid,rounded\\";
        fixedsize = true;
        width = 1;
        height = 1.23;
        labelloc = \\"b\\";
        imagescale = true;
        imagepos = \\"tc\\";
        penwidth = 0;
        fillcolor = \\"transparent\\";
        image = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets/compute/lambda/lambda_function.svg\\";
        color = \\"#232F3E\\";
        fontcolor = \\"#232F3E\\";
      ];
      \\"node_DevFixtureStackRole6CB3830F\\" [
        label = \\"Role\\";
        comment = \\"nodeType:RESOURCE(AWS::IAM::Role)\\";
        shape = \\"box\\";
        style = \\"solid,rounded\\";
        fixedsize = true;
        width = 1;
        height = 1.23;
        labelloc = \\"b\\";
        imagescale = true;
        imagepos = \\"tc\\";
        penwidth = 0;
        fillcolor = \\"transparent\\";
        image = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets/security_identity_compliance/iam/role.svg\\";
        color = \\"#232F3E\\";
        fontcolor = \\"#232F3E\\";
      ];
      \\"node_DevFixtureStackVPC2BA097AB\\" [
        label = \\"VPC\\";
        comment = \\"nodeType:RESOURCE(AWS::EC2::VPC)\\";
        shape = \\"box\\";
        style = \\"solid,rounded\\";
        fixedsize = true;
        width = 1;
        height = 1.23;
        labelloc = \\"b\\";
        imagescale = true;
        imagepos = \\"tc\\";
        penwidth = 0;
        fillcolor = \\"transparent\\";
        image = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets/networking_content_delivery/vpc/service_icon.svg\\";
        color = \\"#232F3E\\";
        fontcolor = \\"#232F3E\\";
      ];
      \\"node_DevFixtureStackWebSecurityGroup6717A627\\" [
        label = \\"WebSecurity\\\\nGroup\\";
        comment = \\"nodeType:RESOURCE(AWS::EC2::SecurityGroup)\\";
        shape = \\"box\\";
        style = \\"solid,rounded\\";
        fixedsize = true;
        width = 1;
        height = 1.46;
        labelloc = \\"b\\";
        imagescale = true;
        imagepos = \\"tc\\";
        penwidth = 0;
        fillcolor = \\"transparent\\";
        image = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets/compute/ec2/service_icon.svg\\";
        color = \\"#232F3E\\";
        fontcolor = \\"#232F3E\\";
      ];
      \\"node_DevFixtureStackwebserverrole7B731372\\" [
        label = \\"WebserverRole\\";
        comment = \\"nodeType:RESOURCE(AWS::IAM::Role)\\";
        shape = \\"box\\";
        style = \\"solid,rounded\\";
        fixedsize = true;
        width = 1;
        height = 1.23;
        labelloc = \\"b\\";
        imagescale = true;
        imagepos = \\"tc\\";
        penwidth = 0;
        fillcolor = \\"transparent\\";
        image = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets/security_identity_compliance/iam/role.svg\\";
        color = \\"#232F3E\\";
        fontcolor = \\"#232F3E\\";
      ];
      \\"node_DevFixtureStackWebServer79E47989\\" [
        label = \\"WebServer\\";
        comment = \\"nodeType:RESOURCE(AWS::EC2::Instance)\\";
        shape = \\"box\\";
        style = \\"solid,rounded\\";
        fixedsize = true;
        width = 1;
        height = 1.23;
        labelloc = \\"b\\";
        imagescale = true;
        imagepos = \\"tc\\";
        penwidth = 0;
        fillcolor = \\"transparent\\";
        image = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets/compute/ec2/instance/c5.svg\\";
        color = \\"#232F3E\\";
        fontcolor = \\"#232F3E\\";
      ];
      \\"node_DevFixtureStackBastion05944451\\" [
        label = \\"Bastion\\";
        comment = \\"nodeType:RESOURCE(AWS::EC2::Instance)\\";
        shape = \\"box\\";
        style = \\"solid,rounded\\";
        fixedsize = true;
        width = 1;
        height = 1.23;
        labelloc = \\"b\\";
        imagescale = true;
        imagepos = \\"tc\\";
        penwidth = 0;
        fillcolor = \\"transparent\\";
        image = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets/compute/ec2/instance/t2.svg\\";
        color = \\"#232F3E\\";
        fontcolor = \\"#232F3E\\";
      ];
      \\"node_DevFixtureStackDatabaseE8AA02DA\\" [
        label = \\"Database\\";
        comment = \\"nodeType:RESOURCE(AWS::RDS::DBInstance)\\";
        shape = \\"box\\";
        style = \\"solid,rounded\\";
        fixedsize = true;
        width = 1;
        height = 1.23;
        labelloc = \\"b\\";
        imagescale = true;
        imagepos = \\"tc\\";
        penwidth = 0;
        fillcolor = \\"transparent\\";
        image = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets/database/rds/instance/postgresql.svg\\";
        color = \\"#232F3E\\";
        fontcolor = \\"#232F3E\\";
      ];
    }
    subgraph \\"cluster_stack_DevDependentStack\\" {
      fontname = \\"Roboto Condensed\\";
      class = \\"font_light\\";
      labelloc = \\"tc\\";
      fontsize = 12;
      style = \\"solid,bold,filled\\";
      label = \\"DependentStack\\";
      fillcolor = \\"#5A6B861A\\";
      margin = 10;
      color = \\"#000000CC\\";
      bgcolor = \\"#5A6B861A\\";
      pencolor = \\"transparent\\";
      fontcolor = \\"#000000CC\\";
      subgraph \\"cluster_nstack_DevDependentStackResourceStackB2E0A649\\" {
        fontname = \\"Roboto Condensed\\";
        class = \\"font_light_italic\\";
        labelloc = \\"tc\\";
        fontsize = 12;
        style = \\"solid,filled\\";
        label = \\"ResourceStack\\";
        fillcolor = \\"#5A6B861A\\";
        margin = 6;
        color = \\"#000000CC\\";
        bgcolor = \\"#5A6B861A\\";
        pencolor = \\"transparent\\";
        fontcolor = \\"#000000CC\\";
        \\"node_DevDependentStackResourceStackLambdaFunctionAFB760D2\\" [
          label = \\"LambdaFunction\\";
          comment = \\"nodeType:RESOURCE(AWS::Lambda::Function)\\";
          shape = \\"box\\";
          style = \\"solid,rounded\\";
          fixedsize = true;
          width = 1;
          height = 1.23;
          labelloc = \\"b\\";
          imagescale = true;
          imagepos = \\"tc\\";
          penwidth = 0;
          fillcolor = \\"transparent\\";
          image = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets/compute/lambda/lambda_function.svg\\";
          color = \\"#232F3E\\";
          fontcolor = \\"#232F3E\\";
        ];
        \\"node_DevDependentStackResourceStackRole6CF25393\\" [
          label = \\"Role\\";
          comment = \\"nodeType:RESOURCE(AWS::IAM::Role)\\";
          shape = \\"box\\";
          style = \\"solid,rounded\\";
          fixedsize = true;
          width = 1;
          height = 1.23;
          labelloc = \\"b\\";
          imagescale = true;
          imagepos = \\"tc\\";
          penwidth = 0;
          fillcolor = \\"transparent\\";
          image = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets/security_identity_compliance/iam/role.svg\\";
          color = \\"#232F3E\\";
          fontcolor = \\"#232F3E\\";
        ];
      }
    }
  }
  subgraph \\"cluster_stage_Staging\\" {
    fontname = \\"Roboto Condensed\\";
    class = \\"font_bold_italic\\";
    labelloc = \\"tc\\";
    fontsize = 12;
    style = \\"dashed\\";
    label = \\"Staging\\";
    margin = 6;
    color = \\"#B0084D\\";
    bgcolor = \\"transparent\\";
    fillcolor = \\"transparent\\";
    pencolor = \\"#B0084D\\";
    fontcolor = \\"#B0084D\\";
    subgraph \\"cluster_stack_StagingFixtureStack\\" {
      fontname = \\"Roboto Condensed\\";
      class = \\"font_light\\";
      labelloc = \\"tc\\";
      fontsize = 12;
      style = \\"solid,bold,filled\\";
      label = \\"FixtureStack\\";
      fillcolor = \\"#5A6B861A\\";
      margin = 10;
      color = \\"#000000CC\\";
      bgcolor = \\"#5A6B861A\\";
      pencolor = \\"transparent\\";
      fontcolor = \\"#000000CC\\";
      \\"node_StagingFixtureStackBucketCCD42ADB\\" [
        label = \\"Bucket\\";
        comment = \\"nodeType:RESOURCE(AWS::S3::Bucket)\\";
        shape = \\"box\\";
        style = \\"solid,rounded\\";
        fixedsize = true;
        width = 1;
        height = 1.23;
        labelloc = \\"b\\";
        imagescale = true;
        imagepos = \\"tc\\";
        penwidth = 0;
        fillcolor = \\"transparent\\";
        image = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets/storage/s3/bucket.svg\\";
        color = \\"#232F3E\\";
        fontcolor = \\"#232F3E\\";
      ];
      \\"node_StagingFixtureStackLambdaFunctionA7A4940C\\" [
        label = \\"LambdaFunction\\";
        comment = \\"nodeType:RESOURCE(AWS::Lambda::Function)\\";
        shape = \\"box\\";
        style = \\"solid,rounded\\";
        fixedsize = true;
        width = 1;
        height = 1.23;
        labelloc = \\"b\\";
        imagescale = true;
        imagepos = \\"tc\\";
        penwidth = 0;
        fillcolor = \\"transparent\\";
        image = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets/compute/lambda/lambda_function.svg\\";
        color = \\"#232F3E\\";
        fontcolor = \\"#232F3E\\";
      ];
      \\"node_StagingFixtureStackRoleC3CAC88D\\" [
        label = \\"Role\\";
        comment = \\"nodeType:RESOURCE(AWS::IAM::Role)\\";
        shape = \\"box\\";
        style = \\"solid,rounded\\";
        fixedsize = true;
        width = 1;
        height = 1.23;
        labelloc = \\"b\\";
        imagescale = true;
        imagepos = \\"tc\\";
        penwidth = 0;
        fillcolor = \\"transparent\\";
        image = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets/security_identity_compliance/iam/role.svg\\";
        color = \\"#232F3E\\";
        fontcolor = \\"#232F3E\\";
      ];
      \\"node_StagingFixtureStackVPC2C79E6EA\\" [
        label = \\"VPC\\";
        comment = \\"nodeType:RESOURCE(AWS::EC2::VPC)\\";
        shape = \\"box\\";
        style = \\"solid,rounded\\";
        fixedsize = true;
        width = 1;
        height = 1.23;
        labelloc = \\"b\\";
        imagescale = true;
        imagepos = \\"tc\\";
        penwidth = 0;
        fillcolor = \\"transparent\\";
        image = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets/networking_content_delivery/vpc/service_icon.svg\\";
        color = \\"#232F3E\\";
        fontcolor = \\"#232F3E\\";
      ];
      \\"node_StagingFixtureStackWebSecurityGroup6BE185AC\\" [
        label = \\"WebSecurity\\\\nGroup\\";
        comment = \\"nodeType:RESOURCE(AWS::EC2::SecurityGroup)\\";
        shape = \\"box\\";
        style = \\"solid,rounded\\";
        fixedsize = true;
        width = 1;
        height = 1.46;
        labelloc = \\"b\\";
        imagescale = true;
        imagepos = \\"tc\\";
        penwidth = 0;
        fillcolor = \\"transparent\\";
        image = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets/compute/ec2/service_icon.svg\\";
        color = \\"#232F3E\\";
        fontcolor = \\"#232F3E\\";
      ];
      \\"node_StagingFixtureStackwebserverroleAC8FFE7D\\" [
        label = \\"WebserverRole\\";
        comment = \\"nodeType:RESOURCE(AWS::IAM::Role)\\";
        shape = \\"box\\";
        style = \\"solid,rounded\\";
        fixedsize = true;
        width = 1;
        height = 1.23;
        labelloc = \\"b\\";
        imagescale = true;
        imagepos = \\"tc\\";
        penwidth = 0;
        fillcolor = \\"transparent\\";
        image = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets/security_identity_compliance/iam/role.svg\\";
        color = \\"#232F3E\\";
        fontcolor = \\"#232F3E\\";
      ];
      \\"node_StagingFixtureStackWebServer60C30D8E\\" [
        label = \\"WebServer\\";
        comment = \\"nodeType:RESOURCE(AWS::EC2::Instance)\\";
        shape = \\"box\\";
        style = \\"solid,rounded\\";
        fixedsize = true;
        width = 1;
        height = 1.23;
        labelloc = \\"b\\";
        imagescale = true;
        imagepos = \\"tc\\";
        penwidth = 0;
        fillcolor = \\"transparent\\";
        image = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets/compute/ec2/instance/c5.svg\\";
        color = \\"#232F3E\\";
        fontcolor = \\"#232F3E\\";
      ];
      \\"node_StagingFixtureStackBastion51DE5EF1\\" [
        label = \\"Bastion\\";
        comment = \\"nodeType:RESOURCE(AWS::EC2::Instance)\\";
        shape = \\"box\\";
        style = \\"solid,rounded\\";
        fixedsize = true;
        width = 1;
        height = 1.23;
        labelloc = \\"b\\";
        imagescale = true;
        imagepos = \\"tc\\";
        penwidth = 0;
        fillcolor = \\"transparent\\";
        image = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets/compute/ec2/instance/t2.svg\\";
        color = \\"#232F3E\\";
        fontcolor = \\"#232F3E\\";
      ];
      \\"node_StagingFixtureStackDatabase3A61BE5C\\" [
        label = \\"Database\\";
        comment = \\"nodeType:RESOURCE(AWS::RDS::DBInstance)\\";
        shape = \\"box\\";
        style = \\"solid,rounded\\";
        fixedsize = true;
        width = 1;
        height = 1.23;
        labelloc = \\"b\\";
        imagescale = true;
        imagepos = \\"tc\\";
        penwidth = 0;
        fillcolor = \\"transparent\\";
        image = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets/database/rds/instance/postgresql.svg\\";
        color = \\"#232F3E\\";
        fontcolor = \\"#232F3E\\";
      ];
    }
    subgraph \\"cluster_stack_StagingDependentStack\\" {
      fontname = \\"Roboto Condensed\\";
      class = \\"font_light\\";
      labelloc = \\"tc\\";
      fontsize = 12;
      style = \\"solid,bold,filled\\";
      label = \\"DependentStack\\";
      fillcolor = \\"#5A6B861A\\";
      margin = 10;
      color = \\"#000000CC\\";
      bgcolor = \\"#5A6B861A\\";
      pencolor = \\"transparent\\";
      fontcolor = \\"#000000CC\\";
      subgraph \\"cluster_nstack_StagingDependentStackResourceStack80870182\\" {
        fontname = \\"Roboto Condensed\\";
        class = \\"font_light_italic\\";
        labelloc = \\"tc\\";
        fontsize = 12;
        style = \\"solid,filled\\";
        label = \\"ResourceStack\\";
        fillcolor = \\"#5A6B861A\\";
        margin = 6;
        color = \\"#000000CC\\";
        bgcolor = \\"#5A6B861A\\";
        pencolor = \\"transparent\\";
        fontcolor = \\"#000000CC\\";
        \\"node_StagingDependentStackResourceStackLambdaFunction43C59230\\" [
          label = \\"LambdaFunction\\";
          comment = \\"nodeType:RESOURCE(AWS::Lambda::Function)\\";
          shape = \\"box\\";
          style = \\"solid,rounded\\";
          fixedsize = true;
          width = 1;
          height = 1.23;
          labelloc = \\"b\\";
          imagescale = true;
          imagepos = \\"tc\\";
          penwidth = 0;
          fillcolor = \\"transparent\\";
          image = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets/compute/lambda/lambda_function.svg\\";
          color = \\"#232F3E\\";
          fontcolor = \\"#232F3E\\";
        ];
        \\"node_StagingDependentStackResourceStackRoleD0FD634B\\" [
          label = \\"Role\\";
          comment = \\"nodeType:RESOURCE(AWS::IAM::Role)\\";
          shape = \\"box\\";
          style = \\"solid,rounded\\";
          fixedsize = true;
          width = 1;
          height = 1.23;
          labelloc = \\"b\\";
          imagescale = true;
          imagepos = \\"tc\\";
          penwidth = 0;
          fillcolor = \\"transparent\\";
          image = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets/security_identity_compliance/iam/role.svg\\";
          color = \\"#232F3E\\";
          fontcolor = \\"#232F3E\\";
        ];
      }
    }
  }
  subgraph \\"cluster_stage_Prod\\" {
    fontname = \\"Roboto Condensed\\";
    class = \\"font_bold_italic\\";
    labelloc = \\"tc\\";
    fontsize = 12;
    style = \\"dashed\\";
    label = \\"Prod\\";
    margin = 6;
    color = \\"#B0084D\\";
    bgcolor = \\"transparent\\";
    fillcolor = \\"transparent\\";
    pencolor = \\"#B0084D\\";
    fontcolor = \\"#B0084D\\";
    subgraph \\"cluster_stack_ProdFixtureStack\\" {
      fontname = \\"Roboto Condensed\\";
      class = \\"font_light\\";
      labelloc = \\"tc\\";
      fontsize = 12;
      style = \\"solid,bold,filled\\";
      label = \\"FixtureStack\\";
      fillcolor = \\"#5A6B861A\\";
      margin = 10;
      color = \\"#000000CC\\";
      bgcolor = \\"#5A6B861A\\";
      pencolor = \\"transparent\\";
      fontcolor = \\"#000000CC\\";
      \\"node_ProdFixtureStackBucket9E447931\\" [
        label = \\"Bucket\\";
        comment = \\"nodeType:RESOURCE(AWS::S3::Bucket)\\";
        shape = \\"box\\";
        style = \\"solid,rounded\\";
        fixedsize = true;
        width = 1;
        height = 1.23;
        labelloc = \\"b\\";
        imagescale = true;
        imagepos = \\"tc\\";
        penwidth = 0;
        fillcolor = \\"transparent\\";
        image = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets/storage/s3/bucket.svg\\";
        color = \\"#232F3E\\";
        fontcolor = \\"#232F3E\\";
      ];
      \\"node_ProdFixtureStackLambdaFunction0718D30C\\" [
        label = \\"LambdaFunction\\";
        comment = \\"nodeType:RESOURCE(AWS::Lambda::Function)\\";
        shape = \\"box\\";
        style = \\"solid,rounded\\";
        fixedsize = true;
        width = 1;
        height = 1.23;
        labelloc = \\"b\\";
        imagescale = true;
        imagepos = \\"tc\\";
        penwidth = 0;
        fillcolor = \\"transparent\\";
        image = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets/compute/lambda/lambda_function.svg\\";
        color = \\"#232F3E\\";
        fontcolor = \\"#232F3E\\";
      ];
      \\"node_ProdFixtureStackRole4DDE001C\\" [
        label = \\"Role\\";
        comment = \\"nodeType:RESOURCE(AWS::IAM::Role)\\";
        shape = \\"box\\";
        style = \\"solid,rounded\\";
        fixedsize = true;
        width = 1;
        height = 1.23;
        labelloc = \\"b\\";
        imagescale = true;
        imagepos = \\"tc\\";
        penwidth = 0;
        fillcolor = \\"transparent\\";
        image = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets/security_identity_compliance/iam/role.svg\\";
        color = \\"#232F3E\\";
        fontcolor = \\"#232F3E\\";
      ];
      \\"node_ProdFixtureStackVPC826F253F\\" [
        label = \\"VPC\\";
        comment = \\"nodeType:RESOURCE(AWS::EC2::VPC)\\";
        shape = \\"box\\";
        style = \\"solid,rounded\\";
        fixedsize = true;
        width = 1;
        height = 1.23;
        labelloc = \\"b\\";
        imagescale = true;
        imagepos = \\"tc\\";
        penwidth = 0;
        fillcolor = \\"transparent\\";
        image = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets/networking_content_delivery/vpc/service_icon.svg\\";
        color = \\"#232F3E\\";
        fontcolor = \\"#232F3E\\";
      ];
      \\"node_ProdFixtureStackWebSecurityGroupE76D3753\\" [
        label = \\"WebSecurity\\\\nGroup\\";
        comment = \\"nodeType:RESOURCE(AWS::EC2::SecurityGroup)\\";
        shape = \\"box\\";
        style = \\"solid,rounded\\";
        fixedsize = true;
        width = 1;
        height = 1.46;
        labelloc = \\"b\\";
        imagescale = true;
        imagepos = \\"tc\\";
        penwidth = 0;
        fillcolor = \\"transparent\\";
        image = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets/compute/ec2/service_icon.svg\\";
        color = \\"#232F3E\\";
        fontcolor = \\"#232F3E\\";
      ];
      \\"node_ProdFixtureStackwebserverrole243B4F92\\" [
        label = \\"WebserverRole\\";
        comment = \\"nodeType:RESOURCE(AWS::IAM::Role)\\";
        shape = \\"box\\";
        style = \\"solid,rounded\\";
        fixedsize = true;
        width = 1;
        height = 1.23;
        labelloc = \\"b\\";
        imagescale = true;
        imagepos = \\"tc\\";
        penwidth = 0;
        fillcolor = \\"transparent\\";
        image = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets/security_identity_compliance/iam/role.svg\\";
        color = \\"#232F3E\\";
        fontcolor = \\"#232F3E\\";
      ];
      \\"node_ProdFixtureStackWebServerB0B41020\\" [
        label = \\"WebServer\\";
        comment = \\"nodeType:RESOURCE(AWS::EC2::Instance)\\";
        shape = \\"box\\";
        style = \\"solid,rounded\\";
        fixedsize = true;
        width = 1;
        height = 1.23;
        labelloc = \\"b\\";
        imagescale = true;
        imagepos = \\"tc\\";
        penwidth = 0;
        fillcolor = \\"transparent\\";
        image = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets/compute/ec2/instance/c5.svg\\";
        color = \\"#232F3E\\";
        fontcolor = \\"#232F3E\\";
      ];
      \\"node_ProdFixtureStackBastionFD4135A8\\" [
        label = \\"Bastion\\";
        comment = \\"nodeType:RESOURCE(AWS::EC2::Instance)\\";
        shape = \\"box\\";
        style = \\"solid,rounded\\";
        fixedsize = true;
        width = 1;
        height = 1.23;
        labelloc = \\"b\\";
        imagescale = true;
        imagepos = \\"tc\\";
        penwidth = 0;
        fillcolor = \\"transparent\\";
        image = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets/compute/ec2/instance/t2.svg\\";
        color = \\"#232F3E\\";
        fontcolor = \\"#232F3E\\";
      ];
      \\"node_ProdFixtureStackDatabaseAB1AA226\\" [
        label = \\"Database\\";
        comment = \\"nodeType:RESOURCE(AWS::RDS::DBInstance)\\";
        shape = \\"box\\";
        style = \\"solid,rounded\\";
        fixedsize = true;
        width = 1;
        height = 1.23;
        labelloc = \\"b\\";
        imagescale = true;
        imagepos = \\"tc\\";
        penwidth = 0;
        fillcolor = \\"transparent\\";
        image = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets/database/rds/instance/postgresql.svg\\";
        color = \\"#232F3E\\";
        fontcolor = \\"#232F3E\\";
      ];
    }
    subgraph \\"cluster_stack_ProdDependentStack\\" {
      fontname = \\"Roboto Condensed\\";
      class = \\"font_light\\";
      labelloc = \\"tc\\";
      fontsize = 12;
      style = \\"solid,bold,filled\\";
      label = \\"DependentStack\\";
      fillcolor = \\"#5A6B861A\\";
      margin = 10;
      color = \\"#000000CC\\";
      bgcolor = \\"#5A6B861A\\";
      pencolor = \\"transparent\\";
      fontcolor = \\"#000000CC\\";
      subgraph \\"cluster_nstack_ProdDependentStackResourceStack28CAA7DE\\" {
        fontname = \\"Roboto Condensed\\";
        class = \\"font_light_italic\\";
        labelloc = \\"tc\\";
        fontsize = 12;
        style = \\"solid,filled\\";
        label = \\"ResourceStack\\";
        fillcolor = \\"#5A6B861A\\";
        margin = 6;
        color = \\"#000000CC\\";
        bgcolor = \\"#5A6B861A\\";
        pencolor = \\"transparent\\";
        fontcolor = \\"#000000CC\\";
        \\"node_ProdDependentStackResourceStackLambdaFunction68E462DF\\" [
          label = \\"LambdaFunction\\";
          comment = \\"nodeType:RESOURCE(AWS::Lambda::Function)\\";
          shape = \\"box\\";
          style = \\"solid,rounded\\";
          fixedsize = true;
          width = 1;
          height = 1.23;
          labelloc = \\"b\\";
          imagescale = true;
          imagepos = \\"tc\\";
          penwidth = 0;
          fillcolor = \\"transparent\\";
          image = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets/compute/lambda/lambda_function.svg\\";
          color = \\"#232F3E\\";
          fontcolor = \\"#232F3E\\";
        ];
        \\"node_ProdDependentStackResourceStackRole2DED6E96\\" [
          label = \\"Role\\";
          comment = \\"nodeType:RESOURCE(AWS::IAM::Role)\\";
          shape = \\"box\\";
          style = \\"solid,rounded\\";
          fixedsize = true;
          width = 1;
          height = 1.23;
          labelloc = \\"b\\";
          imagescale = true;
          imagepos = \\"tc\\";
          penwidth = 0;
          fillcolor = \\"transparent\\";
          image = \\"/Users/jerjonas/workspaces/COPE/projects/PDK/aws-prototyping-sdk.worktrees/feature/diagram/packages/aws-arch/assets/security_identity_compliance/iam/role.svg\\";
          color = \\"#232F3E\\";
          fontcolor = \\"#232F3E\\";
        ];
      }
    }
  }
  \\"node_DevFixtureStackLambdaFunctionB1D81AFE\\" -> \\"node_DevFixtureStackBucket15FA9EDE\\" [
    id = \\"ATT:ZT6VgC\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_DevFixtureStackBucket15FA9EDE\\" -> \\"node_DevFixtureStackLambdaFunctionB1D81AFE\\" [
    ltail = \\"cluster_stack_DevFixtureStack\\";
    id = \\"REF:Z1Kjb6z\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_DevFixtureStackRole6CB3830F\\" -> \\"node_DevFixtureStackBucket15FA9EDE\\" [
    id = \\"ATT:Z1FkPHB\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_DevFixtureStackRole6CB3830F\\" -> \\"node_DevFixtureStackLambdaFunctionB1D81AFE\\" [
    id = \\"ATT:xGTpt\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_DevFixtureStackWebSecurityGroup6717A627\\" -> \\"node_DevFixtureStackVPC2BA097AB\\" [
    id = \\"REF:2l3sCo\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_DevFixtureStackWebServer79E47989\\" -> \\"node_DevFixtureStackwebserverrole7B731372\\" [
    id = \\"REF:ZBJqTY\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_DevFixtureStackWebServer79E47989\\" -> \\"node_DevFixtureStackBucket15FA9EDE\\" [
    lhead = \\"cluster_stack_DevFixtureStack\\";
    id = \\"REF:278A8d\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_DevFixtureStackWebServer79E47989\\" -> \\"node_DevFixtureStackWebSecurityGroup6717A627\\" [
    id = \\"ATT:ZG0sQj\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_DevFixtureStackWebServer79E47989\\" -> \\"node_DevFixtureStackVPC2BA097AB\\" [
    id = \\"REF:ZRS5kn\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_DevFixtureStackBastion05944451\\" -> \\"node_DevFixtureStackBucket15FA9EDE\\" [
    lhead = \\"cluster_stack_DevFixtureStack\\";
    id = \\"REF:1A31ou\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_DevFixtureStackBastion05944451\\" -> \\"node_DevFixtureStackVPC2BA097AB\\" [
    id = \\"REF:Z1rC7er\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_DevFixtureStackDatabaseE8AA02DA\\" -> \\"node_DevFixtureStackVPC2BA097AB\\" [
    id = \\"REF:ZaRvl7\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_DevFixtureStackBucket15FA9EDE\\" -> \\"node_DevFixtureStackRole6CB3830F\\" [
    ltail = \\"cluster_stack_DevFixtureStack\\";
    id = \\"ATT:Z7TYr0\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_DevDependentStackResourceStackLambdaFunctionAFB760D2\\" -> \\"node_DevFixtureStackBucket15FA9EDE\\" [
    lhead = \\"cluster_stack_DevFixtureStack\\";
    id = \\"IMP:2qmWfX\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_DevDependentStackResourceStackRole6CF25393\\" -> \\"node_DevFixtureStackBucket15FA9EDE\\" [
    lhead = \\"cluster_stack_DevFixtureStack\\";
    id = \\"IMP:Z2o9df9\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_DevDependentStackResourceStackRole6CF25393\\" -> \\"node_DevDependentStackResourceStackLambdaFunctionAFB760D2\\" [
    id = \\"ATT:Z1JYvPx\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_DevDependentStackResourceStackLambdaFunctionAFB760D2\\" -> \\"node_DevDependentStackResourceStackRole6CF25393\\" [
    ltail = \\"cluster_nstack_DevDependentStackResourceStackB2E0A649\\";
    id = \\"REF:Z2tmuVL\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_StagingFixtureStackLambdaFunctionA7A4940C\\" -> \\"node_StagingFixtureStackBucketCCD42ADB\\" [
    id = \\"ATT:Z6v6vN\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_StagingFixtureStackBucketCCD42ADB\\" -> \\"node_StagingFixtureStackLambdaFunctionA7A4940C\\" [
    ltail = \\"cluster_stack_StagingFixtureStack\\";
    id = \\"REF:Z15NUbu\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_StagingFixtureStackRoleC3CAC88D\\" -> \\"node_StagingFixtureStackBucketCCD42ADB\\" [
    id = \\"ATT:1Je1Xs\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_StagingFixtureStackRoleC3CAC88D\\" -> \\"node_StagingFixtureStackLambdaFunctionA7A4940C\\" [
    id = \\"ATT:2eoEuj\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_StagingFixtureStackWebSecurityGroup6BE185AC\\" -> \\"node_StagingFixtureStackVPC2C79E6EA\\" [
    id = \\"REF:1o9DBI\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_StagingFixtureStackWebServer60C30D8E\\" -> \\"node_StagingFixtureStackwebserverroleAC8FFE7D\\" [
    id = \\"REF:NlN6F\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_StagingFixtureStackWebServer60C30D8E\\" -> \\"node_StagingFixtureStackBucketCCD42ADB\\" [
    lhead = \\"cluster_stack_StagingFixtureStack\\";
    id = \\"REF:2vyieB\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_StagingFixtureStackWebServer60C30D8E\\" -> \\"node_StagingFixtureStackWebSecurityGroup6BE185AC\\" [
    id = \\"ATT:Z2aNd2T\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_StagingFixtureStackWebServer60C30D8E\\" -> \\"node_StagingFixtureStackVPC2C79E6EA\\" [
    id = \\"REF:nOxsh\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_StagingFixtureStackBastion51DE5EF1\\" -> \\"node_StagingFixtureStackBucketCCD42ADB\\" [
    lhead = \\"cluster_stack_StagingFixtureStack\\";
    id = \\"REF:Z1JPj1K\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_StagingFixtureStackBastion51DE5EF1\\" -> \\"node_StagingFixtureStackVPC2C79E6EA\\" [
    id = \\"REF:Z1uKzLB\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_StagingFixtureStackDatabase3A61BE5C\\" -> \\"node_StagingFixtureStackVPC2C79E6EA\\" [
    id = \\"REF:Z18Bn25\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_StagingFixtureStackBucketCCD42ADB\\" -> \\"node_StagingFixtureStackRoleC3CAC88D\\" [
    ltail = \\"cluster_stack_StagingFixtureStack\\";
    id = \\"ATT:28y9ri\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_StagingDependentStackResourceStackLambdaFunction43C59230\\" -> \\"node_StagingFixtureStackBucketCCD42ADB\\" [
    lhead = \\"cluster_stack_StagingFixtureStack\\";
    id = \\"IMP:ZwBeer\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_StagingDependentStackResourceStackRoleD0FD634B\\" -> \\"node_StagingFixtureStackBucketCCD42ADB\\" [
    lhead = \\"cluster_stack_StagingFixtureStack\\";
    id = \\"IMP:Z21DLdH\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_StagingDependentStackResourceStackRoleD0FD634B\\" -> \\"node_StagingDependentStackResourceStackLambdaFunction43C59230\\" [
    id = \\"ATT:Z1fHQe5\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_StagingDependentStackResourceStackLambdaFunction43C59230\\" -> \\"node_StagingDependentStackResourceStackRoleD0FD634B\\" [
    ltail = \\"cluster_nstack_StagingDependentStackResourceStack80870182\\";
    id = \\"REF:ZDd1Uf\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_ProdFixtureStackLambdaFunction0718D30C\\" -> \\"node_ProdFixtureStackBucket9E447931\\" [
    id = \\"ATT:2F11T\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_ProdFixtureStackBucket9E447931\\" -> \\"node_ProdFixtureStackLambdaFunction0718D30C\\" [
    ltail = \\"cluster_stack_ProdFixtureStack\\";
    id = \\"REF:6ATjD\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_ProdFixtureStackRole4DDE001C\\" -> \\"node_ProdFixtureStackBucket9E447931\\" [
    id = \\"ATT:Z12Vgga\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_ProdFixtureStackRole4DDE001C\\" -> \\"node_ProdFixtureStackLambdaFunction0718D30C\\" [
    id = \\"ATT:Z155563\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_ProdFixtureStackWebSecurityGroupE76D3753\\" -> \\"node_ProdFixtureStackVPC826F253F\\" [
    id = \\"REF:5wGhz\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_ProdFixtureStackWebServerB0B41020\\" -> \\"node_ProdFixtureStackwebserverrole243B4F92\\" [
    id = \\"REF:Z6Uym8\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_ProdFixtureStackWebServerB0B41020\\" -> \\"node_ProdFixtureStackBucket9E447931\\" [
    lhead = \\"cluster_stack_ProdFixtureStack\\";
    id = \\"REF:Z2jsIhl\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_ProdFixtureStackWebServerB0B41020\\" -> \\"node_ProdFixtureStackWebSecurityGroupE76D3753\\" [
    id = \\"ATT:1i8EoP\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_ProdFixtureStackWebServerB0B41020\\" -> \\"node_ProdFixtureStackVPC826F253F\\" [
    id = \\"REF:27tBwv\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_ProdFixtureStackBastionFD4135A8\\" -> \\"node_ProdFixtureStackBucket9E447931\\" [
    lhead = \\"cluster_stack_ProdFixtureStack\\";
    id = \\"REF:Z2u2F64\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_ProdFixtureStackBastionFD4135A8\\" -> \\"node_ProdFixtureStackVPC826F253F\\" [
    id = \\"REF:Z1uxUCQ\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_ProdFixtureStackDatabaseAB1AA226\\" -> \\"node_ProdFixtureStackVPC826F253F\\" [
    id = \\"REF:Z15QvFd\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_ProdFixtureStackBucket9E447931\\" -> \\"node_ProdFixtureStackRole4DDE001C\\" [
    ltail = \\"cluster_stack_ProdFixtureStack\\";
    id = \\"ATT:Z1HuvRy\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_ProdDependentStackResourceStackLambdaFunction68E462DF\\" -> \\"node_ProdFixtureStackBucket9E447931\\" [
    lhead = \\"cluster_stack_ProdFixtureStack\\";
    id = \\"IMP:Z1XcvxH\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_ProdDependentStackResourceStackRole2DED6E96\\" -> \\"node_ProdFixtureStackBucket9E447931\\" [
    lhead = \\"cluster_stack_ProdFixtureStack\\";
    id = \\"IMP:Z2fpBmG\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_ProdDependentStackResourceStackRole2DED6E96\\" -> \\"node_ProdDependentStackResourceStackLambdaFunction68E462DF\\" [
    id = \\"ATT:jkhLR\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
  \\"node_ProdDependentStackResourceStackLambdaFunction68E462DF\\" -> \\"node_ProdDependentStackResourceStackRole2DED6E96\\" [
    ltail = \\"cluster_nstack_ProdDependentStackResourceStack28CAA7DE\\";
    id = \\"REF:ZKUqqz\\";
    penwidth = 0.75;
    arrowhead = \\"normal\\";
    arrowtail = \\"none\\";
    arrowsize = 0.75;
    style = \\"solid\\";
    color = \\"#5A6B86\\";
    fontcolor = \\"#5A6B86\\";
  ];
}"
`;
